# constitutionai

./: .gitignore  README.md  app.py  config.yaml  pyproject.toml
data/: constitution.csv
